--- a/_config.yml
+++ b/_config.yml
@@ -73,10 +73,12 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  # provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  # google:
+  provider               : "google-gtag"
   google:
-    tracking_id          :
-
+    measurement_id          : "G-M295RN079Y"
+    anonymize_ip         : # true, false (default)
 
 # Site Author
 author:
