--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/xieheng-wang-27b25128b/"
+  linkedin         : "xieheng-wang-27b25128b/"
   orcid            : "https://orcid.org/0009-0006-7675-8071"
   pinterest        :
   soundcloud       :
@@ -118,7 +118,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/@MarianaOrienteering"
+  youtube          : "@MarianaOrienteering"
   wikipedia        :
 
 
